[feat] Corsair icue hwinfo readings and widgets

--- a/Battery/battery.ini
+++ b/Battery/battery.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | Battery
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Shows the battery charge level.  Shows the charging/connected status if plugged in, or the estimated usage time remaining (if available).
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
