--- a/NowPlaying/media.ini
+++ b/NowPlaying/media.ini
@@ -8,7 +8,7 @@ MouseScrollDownAction=[!CommandMeasure "mTitle" "SetPosition -5"][!Update]
 
 [Metadata]
 Name=Circuitous | NowPlaying
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Set your media player interface in the Settings.ini skin. | Click on the main text to open the player if it is closed, or show it if it is hidden. | Mouseover shows player controls. | When a song is playing, use the mousewheel to scrub forward and backward through the song, or click anywhere in the roundline to jump to that position.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
