--- a/Processor/core 3/core3.ini
+++ b/Processor/core 3/core3.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | CPU core 3
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays the percent load and core frequency of the second CPU core.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
