--- a/UpTime/Uptime.ini
+++ b/UpTime/Uptime.ini
@@ -3,50 +3,36 @@ Update=1000
 Group=circa2
 
 [Metadata]
-Name=Circuitous |
+Name=Circuitous
 Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceFAN.txt
+@include2=#@#AppearanceUPTIME.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
 
-[mTemp]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value1
-
-[mPercent]
-Measure=Calc
-Formula=(mTemp/100)
-
-@include5="#@#sharedMeters.inc"
-
-[pie]
-Meter=ROUNDLINE
-MeterStyle=roundlineCommon | pieCommon
-MeasureName=mPercent
-LineColor=#pieColor#
+[MeasureUpTime]
+Measure=UpTime
+Format="%3!i!:%2!i!:%1!i!"
 
 [divider]
 Meter=IMAGE
+W=60
 MeterStyle=dividerStyle | dividerCommon
 
 [mainText]
 Meter=STRING
+FontColor=255,255,255,255
+FontSize=13
 MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mTemp
+MeasureName=MeasureUpTime
 
 [subText]
 Meter=STRING
+FontSize=10
 MeterStyle=subTextStyle | subTextCommon
-MeasureName=mPercent
-NumOfDecimals=2
-ClipString=2
-ClipStringH=100
-Text="Intel Core i7-10700K"
+Text="Uptime"
