--- a/Disks/activity/driveActivity.ini
+++ b/Disks/activity/driveActivity.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | Hard drive activity
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays the percent disk time and disk traffic per second from Windows Performance Monitor. | By default, the skin measures across all disks.  This can be changed by editing the "PerfMonInstance" value in the skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
