--- a/Disks/disk3/disk3.ini
+++ b/Disks/disk3/disk3.ini
@@ -6,7 +6,7 @@ MouseLeaveAction=[!SetOption "subText" "Text" "#*textA*#"][!Redraw]
 
 [Metadata]
 Name=Circuitous | Hard drive 3
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Shows used (percentage) and free (numeric) disk space for the specified hard drive. | Mouse over the skin to show total disk space, and click the main text to open the drive in Windows Explorer. | You can change which hard drives are measured in the Settings.ini skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
