--- a/Memory/ram/ram.ini
+++ b/Memory/ram/ram.ini
@@ -6,7 +6,7 @@ MouseLeaveAction=[!SetOption "subText" "Text" "%1B free"][!Redraw]
 
 [Metadata]
 Name=Circuitous | Ram memory
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays physical memory (RAM) usage.  The secondary text normally shows the amount of RAM free; mouse over the skin to show the total amount of RAM.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
