--- a/Network/download/download.ini
+++ b/Network/download/download.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | Nic Upload
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays inbound/download traffic over the computer's network interface card, relative to a user specified maximum. | Mouse over the main text to display your computer's WAN IP address in a tooltip. | Adjust the maximum download speed of your network connection in the Settings.ini skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
