--- a/Network/wifi/wireless.ini
+++ b/Network/wifi/wireless.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | Wifi
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=If connected to a Wifi network, shows the Wifi signal strength, network name, and authentication type.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
