--- a/Processor/core 4/core4.ini
+++ b/Processor/core 4/core4.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | CPU core 4
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays the percent load and core frequency of the fourth CPU core.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
