--- a/Processor/cpu.ini
+++ b/Processor/cpu.ini
@@ -4,7 +4,7 @@ Group=circa2
 
 [Metadata]
 Name=Circuitous | Processor
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays the percentage load of the CPU (average of all cores), and the process that currently has the most CPU usage. | Click the main text to launch the Windows Task Manager.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
