--- a/Temps/GPU/GPU.ini
+++ b/Temps/GPU/GPU.ini
@@ -1,36 +1,37 @@
 [Rainmeter]
 Update=1000
 Group=circa2
+MouseOverAction=[!SetOption "mainText" "Text" "%2"][!Redraw]
+MouseLeaveAction=[!SetOption "mainText" "Text" "%1"][!Redraw]
 
 [Metadata]
 Name=Circuitous |
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#Appearance.txt
+@include2=#@#AppearanceFAN.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
 
 [mTemp]
-Measure=Plugin
-Plugin=SpeedFanPlugin
-SpeedFanType=Temperature
-SpeedFanNumber=#sfTempIndex#
-SpeedFanScale=C
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO64\VSB
+RegValue=Value22
 
-[mVoltage]
-Measure=Plugin
-Plugin=SpeedFanPlugin
-SpeedFanType=Voltage
-SpeedFanNumber=#sfVoltIndex#
+[mRpm]
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO64\VSB
+RegValue=Value23
 
 [mPercent]
 Measure=Calc
-Formula=(mTemp/#sfMaxTemp#)
+Formula=(mTemp/100)
 
 @include5="#@#sharedMeters.inc"
 
@@ -48,11 +49,13 @@ MeterStyle=dividerStyle | dividerCommon
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mTemp
-Text="%1°C"
+MeasureName2=mRpm
+Text="%1"
 
 [subText]
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
-MeasureName=mVoltage
 NumOfDecimals=2
-Text="voltage: %1 v"
+ClipString=2
+ClipStringH=100
+Text="NVIDIA GeForce GTX 1060 6GB"
