--- a/Temps/Pump/Pump.ini
+++ b/Temps/Pump/Pump.ini
@@ -1,10 +1,13 @@
 [Rainmeter]
 Update=1000
 Group=circa2
+MouseOverAction=[!SetOption "mainText" "Text" "%2"][!Redraw]
+MouseLeaveAction=[!SetOption "mainText" "Text" "%1"][!Redraw]
+
 
 [Metadata]
 Name=Circuitous |
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
@@ -14,18 +17,19 @@ License=Creative Commons BY-NC-SA 3.0
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
+@include5="#@#sharedMeters.inc"
 
 [mTemp]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value14
+RegValue=Value18
 
 [mRpm]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value15
+RegValue=Value19
 
 [mPercent]
 Measure=Calc
@@ -47,12 +51,15 @@ MeterStyle=dividerStyle | dividerCommon
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mTemp
+MeasureName2=mRpm
+ClipStringW=20
+ClipStringH=40
+ClipString=1
+Text="%1"
 
 [subText]
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
-MeasureName=mRpm
-NumOfDecimals=2
 ClipString=2
 ClipStringH=100
-Text="Corsair H100I %1"
+Text="Corsair H100I"
