--- a/Weather/yweather.ini
+++ b/Weather/yweather.ini
@@ -1,12 +1,12 @@
 [Rainmeter]
 Update=1000
 Group=circa2
-MouseOverAction=[!SetOption mainText Text "%3° - %4°"][!SetOption subText Text "%2"][!Redraw]
-MouseLeaveAction=[!SetOption mainText Text "%1°%2"][!SetOption subText Text "%1"][!Redraw]
+MouseOverAction=[!SetOption mainText Text "%3ï¿½ - %4ï¿½"][!SetOption subText Text "%2"][!Redraw]
+MouseLeaveAction=[!SetOption mainText Text "%1ï¿½%2"][!SetOption subText Text "%1"][!Redraw]
 
 [Metadata]
 Name=Circuitous | Weather
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=Retrieves current weather conditions and today's forecast from Yahoo! Weather. | Set your location (WOEID) and unit of measurement in the Settings.ini skin. | The skin normally display's current conditions; mouse over to see today's forecast.  | The roundline shows the current temperature relative to today's forecasted low and high.  | Click the main text to go to Yahoo! Weather
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
@@ -103,7 +103,7 @@ MeasureName3=mTodayLow
 MeasureName4=mTodayHigh
 MeasureName5=mTitle
 MeasureName6=mPubDate
-Text="%1°%2"
+Text="%1ï¿½%2"
 ToolTipText="%5#CRLF#%6"
 LeftMouseUpAction=["[mLink]"]
 
