--- a/_bars/horizontal.ini
+++ b/_bars/horizontal.ini
@@ -6,7 +6,7 @@ OnRefreshAction=!Zpos -2
 
 [Metadata]
 Name=Circuitous |
-Author=Flying Hyrax | flyinghyrax.deviantart.com
+Author=Norbert Ruff | based on Flying Hyrax
 Information=
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
