--- a/Battery/battery.ini
+++ b/Battery/battery.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\battery.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -75,3 +75,11 @@ MeterStyle=subTextStyle | subTextCommon
 MeasureName=mLifetime
 Text=
 Postfix=
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
