--- a/Disks/activity/driveActivity.ini
+++ b/Disks/activity/driveActivity.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceIO.txt
+@include2=#@#Apparence\io.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -59,3 +59,10 @@ MeterStyle=subTextStyle | subTextCommon
 MeasureName=mDiskBytesSec
 AutoScale=1
 Text="%1b/s"
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
