--- a/Network/wifi/wireless.ini
+++ b/Network/wifi/wireless.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\wifi.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
