--- a/Temps/Disks/Fan3.ini
+++ b/Temps/Disks/Fan3.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceFAN.txt
+@include2=#@#Apparence\fan.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -54,5 +54,12 @@ MeterStyle=subTextStyle | subTextCommon
 MeasureName=mRpm
 NumOfDecimals=2
 ClipString=2
-ClipStringH=100
+ClipStringW=80
 Text="Corsair H100I %1"
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
