--- a/Temps/Fan2/Fan2.ini
+++ b/Temps/Fan2/Fan2.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceFAN.txt
+@include2=#@#Apparence\fan.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -46,5 +46,12 @@ MeasureName=mRpm
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 ClipString=2
-ClipStringH=100
+ClipStringW=80
 Text="Corsair SP120 #2"
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
