--- a/Temps/GPU/GPU.ini
+++ b/Temps/GPU/GPU.ini
@@ -12,7 +12,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceFAN.txt
+@include2=#@#Apparence\fan.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -57,5 +57,13 @@ Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 NumOfDecimals=2
 ClipString=2
-ClipStringH=100
-Text="NVIDIA GeForce GTX 1060 6GB"
+ClipStringW=80
+Text="MSI GTX 1060 6GB"
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
