--- a/_bars/horizontal.ini
+++ b/_bars/horizontal.ini
@@ -11,7 +11,7 @@ Information=
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\default.txt
 
 [background]
 Meter=IMAGE
