--- a/Config.ini
+++ b/Config.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\default.txt
 
 [Variables]
 page=1
@@ -37,12 +37,12 @@ StringAlign=Left
 FocusDismiss=1
 DefaultValue="..."
 X=160
-Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Appearance.txt"][!RefreshGroup circa2] DefaultValue="#pieColor#" Y=290
-COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Appearance.txt"][!RefreshGroup circa2] DefaultValue="#innerRingColor#" Y=325
-Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Appearance.txt"][!RefreshGroup circa2] DefaultValue="#pieBgColor#" Y=360
-Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Appearance.txt"][!RefreshGroup circa2] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
-Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Appearance.txt"][!RefreshGroup circa2] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
-Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Appearance.txt"][!RefreshGroup circa2] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
 
 [mSettingsInput]
 Measure=Plugin
@@ -76,7 +76,7 @@ ScriptFile="#@#Scripts\Settings.lua"
 
 [allText]
 AntiAlias=1
-FontFace=Sansation
+FontFace=Ubuntu Nerd Font
 
 [pageSwitcher]
 FontColor=#textColor#
@@ -92,7 +92,7 @@ FontColor=#highlightColor#
 FontSize=13
 SolidColor=0,0,0,1
 AntiAlias=1
-FontFace=Sansation
+FontFace=Ubuntu Nerd Font
 StringAlign=LeftBottom
 ToolTipWidth=300
 X=130
@@ -101,7 +101,7 @@ X=130
 FontColor=#textColor#
 FontSize=11
 AntiAlias=1
-FontFace=Sansation
+FontFace=Ubuntu Nerd Font
 SolidColor=0,0,0,1
 ToolTipWidth=200
 X=r
@@ -238,8 +238,8 @@ Meter=String
 MeterStyle=allText | readme
 Y=25r
 Text=advanced
-LeftMouseUpaction=["#@#Appearance.txt"]["#@#Settings.txt"]
-ToolTipText="opens appearance.txt and settings.txt to manually edit settings"
+LeftMouseUpaction=["#@#default.txt"]["#@#Settings.txt"]
+ToolTipText="opens default.txt and settings.txt to manually edit settings"
 
 [reset]
 Meter=String
