--- a/Disks/disk1/disk1.ini
+++ b/Disks/disk1/disk1.ini
@@ -12,7 +12,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceDISKS.txt
+@include2=#@#Apparence\disk.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -84,3 +84,11 @@ MeasureName2=mTotalDisk
 Text=#textA#
 AutoScale=1
 DynamicVariables=1
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
