--- a/Memory/ram/ram.ini
+++ b/Memory/ram/ram.ini
@@ -12,7 +12,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceRAM.txt
+@include2=#@#Apparence\ram.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -57,3 +57,11 @@ MeasureName=mFreeRam
 MeasureName2=mTotalRam
 Text="%1B free"
 AutoScale=1
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
