--- a/Memory/swap/swap.ini
+++ b/Memory/swap/swap.ini
@@ -12,7 +12,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\ram.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -56,3 +56,11 @@ MeasureName=mFreeSwap
 MeasureName2=mTotalSwap
 Text="%1B free"
 AutoScale=1
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
