--- a/Network/download/download.ini
+++ b/Network/download/download.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceNETWORKDOWN.txt
+@include2=#@#Apparence\networkDown.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -58,3 +58,11 @@ MeterStyle=subTextStyle | subTextCommon
 MeasureName=mDownload
 Text="%1 B/s"
 AutoScale=1
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
