--- a/Network/upload/upload.ini
+++ b/Network/upload/upload.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceNETWORKUP.txt
+@include2=#@#Apparence\networkUp.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -57,3 +57,11 @@ MeasureName=mUpload
 Text="%1 B/s"
 FontColor=#textSubColor#
 AutoScale=1
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
