--- a/NowPlaying/media.ini
+++ b/NowPlaying/media.ini
@@ -14,7 +14,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1="#@#Settings.txt"
-@include2="#@#Appearance.txt"
+@include2="#@#default.txt"
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
