--- a/Processor/cpu.ini
+++ b/Processor/cpu.ini
@@ -10,7 +10,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceCPU.txt
+@include2=#@#Apparence\cpu.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -32,6 +32,7 @@ Meter=ROUNDLINE
 MeterStyle=roundlineCommon | pieCommon
 MeasureName=mCPU
 
+
 [divider]
 Meter=IMAGE
 MeterStyle=dividerStyle | dividerCommon
@@ -44,9 +45,17 @@ Percentual=1
 Text="CPU %1%"
 LeftMouseUpAction=["taskmgr.exe"]
 
+
 [subText]
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 MeasureName=mTopProc
 Text="top: %1"
 ToolTipText=%1
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
