--- a/Temps/Pump/Pump.ini
+++ b/Temps/Pump/Pump.ini
@@ -13,7 +13,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#AppearanceFAN.txt
+@include2=#@#Apparence\fan.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
@@ -61,5 +61,13 @@ Text="%1"
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 ClipString=2
-ClipStringH=100
+ClipStringW=80
 Text="Corsair H100I"
+
+
+[Icon]
+Meter=Image
+MeterStyle=iconStyle
+ImageName=icon.png
+ImageTint=#colorIcon#
+
