--- a/Volume/volume.ini
+++ b/Volume/volume.ini
@@ -12,7 +12,7 @@ Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
 @include1=#@#Settings.txt
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\default.txt
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
