--- a/_bars/vertical.ini
+++ b/_bars/vertical.ini
@@ -11,12 +11,12 @@ Information=
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
-@include2=#@#Appearance.txt
+@include2=#@#Apparence\default.txt
 
 [background]
 Meter=IMAGE
 SolidColor=#bgBarColor#
 X=0
 Y=0
-W=((#radius#+#edging#)*2)+(#radius#*4)
+W=((#radius#+#edging#)*2)+(#radius#*3.2)
 H=#WORKAREAHEIGHT#
