--- a/Processor/core 4/core4.ini
+++ b/Processor/core 4/core4.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous | CPU core 4
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=Displays the percent load and core frequency of the fourth CPU core.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
