--- a/Config.ini
+++ b/Config.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Settings Configuration Skin
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=This skin can be used to change appearance, system, and other settings for Circuitous Two. | The "info" tab shows general skin information, like the version, license, and credits. | The "appearance" sectoion is used to change how the skin looks, like the orientation, font, and colors. | The "system" section contains general system settings, like those for hard drives and network speeds. | The "time" section contains the settings for the clock skin. | The "weather" section holds the settings for the Weather skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
@@ -13,7 +13,7 @@ License=Creative Commons BY-NC-SA 3.0
 @include2=#@#Apparence\default.txt
 
 [Variables]
-page=1
+page=2
 textColor=250,250,250,210
 highlightColor=254,210,70,230
 dimColor=120,120,120,100
@@ -37,12 +37,12 @@ StringAlign=Left
 FocusDismiss=1
 DefaultValue="..."
 X=160
-Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#pieColor#" Y=290
-COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#innerRingColor#" Y=325
-Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#pieBgColor#" Y=360
-Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
-Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
-Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#default.txt"][!RefreshGroup circa2] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
 
 [mSettingsInput]
 Measure=Plugin
@@ -115,7 +115,7 @@ Meter=IMAGE
 SolidColor=#bgColor#
 X=0
 Y=0
-W=400
+W=#bgW#
 H=#bgH#
 
 [bgTopEdge]
@@ -145,7 +145,7 @@ H=#bgH#
 [bgRightEdge]
 Meter=Image
 SolidColor=#dimColor#
-X=399
+X=#bgW#-1
 Y=0
 W=1
 H=#bgH#
