--- a/Disks/activity/driveActivity.ini
+++ b/Disks/activity/driveActivity.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous | Hard drive activity
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=Displays the percent disk time and disk traffic per second from Windows Performance Monitor. | By default, the skin measures across all disks.  This can be changed by editing the "PerfMonInstance" value in the skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
