--- a/Network/wifi/wireless.ini
+++ b/Network/wifi/wireless.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous | Wifi
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=If connected to a Wifi network, shows the Wifi signal strength, network name, and authentication type.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
