--- a/Processor/cpu.ini
+++ b/Processor/cpu.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous | Processor
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=Displays the percentage load of the CPU (average of all cores), and the process that currently has the most CPU usage. | Click the main text to launch the Windows Task Manager.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
