--- a/Recycle Bin/bin.ini
+++ b/Recycle Bin/bin.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous | Recycle Bin
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=Shows the number of items in the Recycle Bin, the size of the items, and the percentage space used of a user specified maximum. | Click the main text to open the Recycle Bin; click the secondary text to permanently delete the items in the Recycle Bin (with confirmation dialog). | If the size of the items in the Recycle Bin exceeds the user-specified maximum, the skin will attempt to empty the Recycle Bin automatically (without showing a confirmation dialog). | You can change the maximum allowed size of the Recycle Bin in the Settings.ini skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
