--- a/Temps/Fan1/Fan1.ini
+++ b/Temps/Fan1/Fan1.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
