--- a/Time/clock.ini
+++ b/Time/clock.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 
 [Metadata]
 Name=Circuitous | Time & Date
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=Shows the current time and date. | Use the Settings.ini skin to change the time and date formats, or to change what the roundline displays.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
