--- a/_bars/horizontal.ini
+++ b/_bars/horizontal.ini
@@ -1,12 +1,12 @@
 [Rainmeter]
 Update=1000
-Group=circa2
+Group=sysmon
 Blur=0
 OnRefreshAction=!Zpos -2
 
 [Metadata]
 Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax
+Author=Norbert Ruff | based on Flying Hyrax Circuitous
 Information=
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
