--- a/Network/upload/upload.ini
+++ b/Network/upload/upload.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous | Nic Upload
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Nic Upload
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Displays outbound/upload traffic over the computer's network interface card, relative to a user specified maximum. | Mouse over the main text to display your computer's LAN IP address in a tooltip. | Adjust the maximum upload speed of your network connection in the Settings.ini skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
