--- a/Temps/Fan1/Fan1.ini
+++ b/Temps/Fan1/Fan1.ini
@@ -1,11 +1,11 @@
 [Rainmeter]
-Update=1000
-Group=sysmon
+Update=500
+Group=rsm
 
 [Metadata]
-Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
-Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
+Name=RSM | Fan 1
+Author=Norbert Ruff | https://github.com/NorbertRuff
+Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\RSMTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
@@ -15,15 +15,21 @@ License=Creative Commons BY-NC-SA 3.0
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
 
+[mTemp]
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO64\VSB
+RegValue=#pumpTempValue#
+
 [mRpm]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value20
+RegValue=#fan1rpm#
 
 [mPercent]
 Measure=Calc
-Formula=(mRpm/2500)
+Formula=(mRpm/#fanMaxRpm#)
 
 @include5="#@#sharedMeters.inc"
 
@@ -41,13 +47,18 @@ MeterStyle=dividerStyle | dividerCommon
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mRpm
+MeasureName2=mTemp
+ClipStringW=20
+ClipStringH=40
+ClipString=1
+Text="%1"
 
 [subText]
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 ClipString=2
 ClipStringW=80
-Text="Corsair SP120 #1"
+Text=#fan1Label#
 
 
 [Icon]
