--- a/Temps/Fan4/Fan4.ini
+++ b/Temps/Fan4/Fan4.ini
@@ -1,9 +1,6 @@
 [Rainmeter]
 Update=1000
 Group=rsm
-MouseOverAction=[!SetOption "mainText" "Text" "%2"][!Redraw]
-MouseLeaveAction=[!SetOption "mainText" "Text" "%1"][!Redraw]
-
 
 [Metadata]
 Name=RSM |
@@ -17,23 +14,22 @@ License=Creative Commons BY-NC-SA 3.0
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
-@include5="#@#sharedMeters.inc"
 
 [mTemp]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=#pumpTemp#
+RegValue=#pumpTempValue#
 
 [mRpm]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=#pumpRpm#
+RegValue=#fan4rpm#
 
 [mPercent]
 Measure=Calc
-Formula=(mTemp/100)
+Formula=(mRpm/#fanMaxRpm#)
 
 @include5="#@#sharedMeters.inc"
 
@@ -50,8 +46,8 @@ MeterStyle=dividerStyle | dividerCommon
 [mainText]
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mTemp
-MeasureName2=mRpm
+MeasureName=mRpm
+MeasureName2=mTemp
 ClipStringW=20
 ClipStringH=40
 ClipString=1
@@ -62,7 +58,7 @@ Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 ClipString=2
 ClipStringW=80
-Text=#pumpLabel#
+Text=#fan4Label#
 
 
 [Icon]
@@ -70,4 +66,3 @@ Meter=Image
 MeterStyle=iconStyle
 ImageName=icon.png
 ImageTint=#colorIcon#
-
