--- a/Temps/Ram/RamTemp.ini
+++ b/Temps/Ram/RamTemp.ini
@@ -1,11 +1,11 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
-Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
+Name=RSM |
+Author=Norbert Ruff | https://github.com/NorbertRuff
+Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\RSMTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
@@ -19,13 +19,13 @@ License=Creative Commons BY-NC-SA 3.0
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value14
+RegValue=#pumpTempValue#
 
 [mRpm]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value15
+RegValue=#pumpSpeedValue#
 
 [mPercent]
 Measure=Calc
@@ -47,7 +47,11 @@ MeterStyle=dividerStyle | dividerCommon
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mTemp
-
+MeasureName2=mRpm
+ClipStringW=20
+ClipStringH=40
+ClipString=1
+Text="%1"
 [subText]
 Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
@@ -55,7 +59,7 @@ MeasureName=mRpm
 NumOfDecimals=2
 ClipString=2
 ClipStringW=80
-Text="Corsair H100I %1"
+Text=#ramTempLabel#
 
 
 [Icon]
