--- a/Time/clock.ini
+++ b/Time/clock.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous | Time & Date
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Time & Date
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Shows the current time and date. | Use the Settings.ini skin to change the time and date formats, or to change what the roundline displays.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
