--- a/_bars/horizontal.ini
+++ b/_bars/horizontal.ini
@@ -1,12 +1,12 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 Blur=0
 OnRefreshAction=!Zpos -2
 
 [Metadata]
-Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM |
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
