--- a/Battery/battery.ini
+++ b/Battery/battery.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous | Battery
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Battery
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Shows the battery charge level.  Shows the charging/connected status if plugged in, or the estimated usage time remaining (if available).
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
