--- a/Config.ini
+++ b/Config.ini
@@ -1,11 +1,11 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
 Name=Settings Configuration Skin
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
-Information=This skin can be used to change appearance, system, and other settings for Circuitous Two. | The "info" tab shows general skin information, like the version, license, and credits. | The "appearance" sectoion is used to change how the skin looks, like the orientation, font, and colors. | The "system" section contains general system settings, like those for hard drives and network speeds. | The "time" section contains the settings for the clock skin. | The "weather" section holds the settings for the Weather skin.
+Author=Norbert Ruff | https://github.com/NorbertRuff
+Information=This skin can be used to change appearance, system, and other settings for RSM Two. | The "info" tab shows general skin information, like the version, license, and credits. | The "appearance" sectoion is used to change how the skin looks, like the orientation, font, and colors. | The "system" section contains general system settings, like those for hard drives and network speeds. | The "time" section contains the settings for the clock skin. | The "weather" section holds the settings for the Weather skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
@@ -13,7 +13,7 @@ License=Creative Commons BY-NC-SA 3.0
 @include2=#@#Apparence\default.txt
 
 [Variables]
-page=2
+page=4
 textColor=250,250,250,210
 highlightColor=254,210,70,230
 dimColor=120,120,120,100
@@ -23,7 +23,7 @@ displayVersion=2.0
 ; ============================================================
 ; Text input and script measures
 
-[mAppearanceInput]
+[mAppearanceInputCpu]
 Measure=Plugin
 Plugin=InputText
 W=80
@@ -37,12 +37,155 @@ StringAlign=Left
 FocusDismiss=1
 DefaultValue="..."
 X=160
-Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#pieColor#" Y=290
-COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#innerRingColor#" Y=325
-Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#pieBgColor#" Y=360
-Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
-Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
-Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#default.txt"][!RefreshGroup sysmon] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\cpu.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\cpu.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\cpu.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\cpu.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\cpu.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\cpu.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
+[mAppearanceInputRam]
+Measure=Plugin
+Plugin=InputText
+W=80
+H=15
+SolidColor=200,100,100
+FontColor=#textColor#
+FontFace=Arial
+FontSize=10
+StringStyle=Normal
+StringAlign=Left
+FocusDismiss=1
+DefaultValue="..."
+X=160
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\ram.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\ram.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\ram.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\ram.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\ram.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\ram.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
+[mAppearanceInputio]
+Measure=Plugin
+Plugin=InputText
+W=80
+H=15
+SolidColor=200,100,100
+FontColor=#textColor#
+FontFace=Arial
+FontSize=10
+StringStyle=Normal
+StringAlign=Left
+FocusDismiss=1
+DefaultValue="..."
+X=160
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\io.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\io.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\io.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\io.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\io.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\io.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
+[mAppearanceInputDisk]
+Measure=Plugin
+Plugin=InputText
+W=80
+H=15
+SolidColor=200,100,100
+FontColor=#textColor#
+FontFace=Arial
+FontSize=10
+StringStyle=Normal
+StringAlign=Left
+FocusDismiss=1
+DefaultValue="..."
+X=160
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\disk.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\disk.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\disk.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\disk.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\disk.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\disk.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
+[mAppearanceInputFan]
+Measure=Plugin
+Plugin=InputText
+W=80
+H=15
+SolidColor=200,100,100
+FontColor=#textColor#
+FontFace=Arial
+FontSize=10
+StringStyle=Normal
+StringAlign=Left
+FocusDismiss=1
+DefaultValue="..."
+X=160
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\fan.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\fan.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\fan.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\fan.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\fan.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\fan.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
+
+[mAppearanceInputNetworkDownLoad]
+Measure=Plugin
+Plugin=InputText
+W=80
+H=15
+SolidColor=200,100,100
+FontColor=#textColor#
+FontFace=Arial
+FontSize=10
+StringStyle=Normal
+StringAlign=Left
+FocusDismiss=1
+DefaultValue="..."
+X=160
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\networkDown.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\networkDown.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\networkDown.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\networkDown.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\networkDown.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\networkDown.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
+
+[mAppearanceInputNetworkUpLoad]
+Measure=Plugin
+Plugin=InputText
+W=80
+H=15
+SolidColor=200,100,100
+FontColor=#textColor#
+FontFace=Arial
+FontSize=10
+StringStyle=Normal
+StringAlign=Left
+FocusDismiss=1
+DefaultValue="..."
+X=160
+Command1=[!WriteKeyValue "Variables" "pieColor" "$UserInput$" "#@#Apparence\networkUp.txt"][!RefreshGroup rsm] DefaultValue="#pieColor#" Y=290
+COmmand2=[!WriteKeyValue "Variables" "innerRingColor" "$UserInput$" "#@#Apparence\networkUp.txt"][!RefreshGroup rsm] DefaultValue="#innerRingColor#" Y=325
+Command3=[!WriteKeyValue "Variables" "pieBgColor" "$UserInput$" "#@#Apparence\networkUp.txt"][!RefreshGroup rsm] DefaultValue="#pieBgColor#" Y=360
+Command4=[!WriteKeyValue "variables" "radius" "$UserInput$" "#@#Apparence\networkUp.txt"][!RefreshGroup rsm] DefaultValue="#radius#" FontSize=11 X=300 Y=115 W=70 H=18
+Command5=[!WriteKeyValue "variables" "edging" "(#*radius*#*$UserInput$)" "#@#Apparence\networkUp.txt"][!RefreshGroup rsm] DefaultValue="ex: 0.15" FontSize=11 X=300 Y=170 W=70 H=18
+Command6=[!WriteKeyValue "variables" "mainFont" "$UserInput$" "#@#Apparence\networkUp.txt"][!RefreshGroup rsm] DefaultValue="#mainFont#" FontSize=11 X=130 Y=225 W=100 H=18
+
+
+
 
 [mSettingsInput]
 Measure=Plugin
@@ -58,14 +201,14 @@ StringStyle=Normal
 StringAlign=Left
 FocusDismiss=1
 DefaultValue=""
-Command1=[!WriteKeyValue "Variables" "hd1" "$UserInput$" "#@#Settings.txt"][!Refresh "CircuitousTwo\Disks\disk1"][!Refresh #CURRENTCONFIG#] DefaultValue="#hd1#" Y=40 W=25
-Command2=[!WriteKeyValue "Variables" "hd2" "$UserInput$" "#@#Settings.txt"][!Refresh "CircuitousTwo\Disks\disk2"][!Refresh #CURRENTCONFIG#] DefaultValue="#hd2#" X=170 Y=40 W=25
-Command3=[!WriteKeyValue "Variables" "hd3" "$UserInput$" "#@#Settings.txt"][!Refresh "CircuitousTwo\Disks\disk3"][!Refresh #CURRENTCONFIG#] DefaultValue="#hd3#" X=210 Y=40 W=25
-Command4=[!CommandMeasure "mSettingsScript" "setNetworkSpeed('uploadMax', '$UserInput$')"][!Refresh "CircuitousTwo\Network\upload"][!Refresh #CURRENTCONFIG#] X=185 Y=150 W=75
-Command5=[!CommandMeasure "mSettingsScript" "setNetworkSpeed('downloadMax', '$UserInput$')"][!Refresh "CircuitousTwo\Network\download"][!Refresh #CURRENTCONFIG#] X=205 Y=167 W=75
-Command6=[!WriteKeyValue "Variables" "timeFormat" "$UserInput$" "#@#Settings.txt"][!Refresh "CircuitousTwo\Time"][!Refresh #CURRENTCONFIG#] DefaultValue="#timeFormat#" X=170 Y=133 W=90
-Command7=[!WriteKeyValue "Variables" "dateFormat" "$UserInput$" "#@#Settings.txt"][!Refresh "CircuitousTwo\Time"][!Refresh #CURRENTCONFIG#] DefaultValue="#dateFormat#" X=170 Y=190 W=90
-Command8=[!WriteKeyValue "Variables" "woeid" "$UserInput$" "#@#Settings.txt"][!Refresh "CircuitousTwo\Weather"][!Refresh #CURRENTCONFIG#] DefaultValue="#woeid#" X=190 Y=40
+Command1=[!WriteKeyValue "Variables" "hd1" "$UserInput$" "#@#Settings.txt"][!Refresh "RainMeter-system-monitor-skin\Disks\disk1"][!Refresh #CURRENTCONFIG#] DefaultValue="#hd1#" Y=40 W=25
+Command2=[!WriteKeyValue "Variables" "hd2" "$UserInput$" "#@#Settings.txt"][!Refresh "RainMeter-system-monitor-skin\Disks\disk2"][!Refresh #CURRENTCONFIG#] DefaultValue="#hd2#" X=170 Y=40 W=25
+Command3=[!WriteKeyValue "Variables" "hd3" "$UserInput$" "#@#Settings.txt"][!Refresh "RainMeter-system-monitor-skin\Disks\disk3"][!Refresh #CURRENTCONFIG#] DefaultValue="#hd3#" X=210 Y=40 W=25
+Command4=[!CommandMeasure "mSettingsScript" "setNetworkSpeed('uploadMax', '$UserInput$')"][!Refresh "RainMeter-system-monitor-skin\Network\upload"][!Refresh #CURRENTCONFIG#] X=185 Y=150 W=75
+Command5=[!CommandMeasure "mSettingsScript" "setNetworkSpeed('downloadMax', '$UserInput$')"][!Refresh "RainMeter-system-monitor-skin\Network\download"][!Refresh #CURRENTCONFIG#] X=205 Y=167 W=75
+Command6=[!WriteKeyValue "Variables" "timeFormat" "$UserInput$" "#@#Settings.txt"][!Refresh "RainMeter-system-monitor-skin\Time"][!Refresh #CURRENTCONFIG#] DefaultValue="#timeFormat#" X=170 Y=133 W=90
+Command7=[!WriteKeyValue "Variables" "dateFormat" "$UserInput$" "#@#Settings.txt"][!Refresh "RainMeter-system-monitor-skin\Time"][!Refresh #CURRENTCONFIG#] DefaultValue="#dateFormat#" X=170 Y=190 W=90
+Command8=[!WriteKeyValue "Variables" "woeid" "$UserInput$" "#@#Settings.txt"][!Refresh "RainMeter-system-monitor-skin\Weather"][!Refresh #CURRENTCONFIG#] DefaultValue="#woeid#" X=190 Y=40
 
 [mSettingsScript]
 Measure=Script
@@ -196,26 +339,62 @@ LeftMouseUpAction=[!WriteKeyValue Variables page 1][!Refresh]
 [page2]
 Meter=String
 MeterStyle=allText | pageSwitcher
-Text="appearance"
+Text="CPU"
 LeftMouseUpAction=[!WriteKeyValue Variables page 2][!Refresh]
 
 [page3]
 Meter=String
 MeterStyle=allText | pageSwitcher
-Text="system"
+Text="RAM"
 LeftMouseUpAction=[!WriteKeyValue Variables page 3][!Refresh]
 
 [page4]
 Meter=String
 MeterStyle=allText | pageSwitcher
-Text="time"
+Text="IO"
 LeftMouseUpAction=[!WriteKeyValue Variables page 4][!Refresh]
 
 [page5]
 Meter=String
 MeterStyle=allText | pageSwitcher
-Text="weather"
+Text="disk"
 LeftMouseUpAction=[!WriteKeyValue Variables page 5][!Refresh]
+
+[page6]
+Meter=String
+MeterStyle=allText | pageSwitcher
+Text="fan"
+LeftMouseUpAction=[!WriteKeyValue Variables page 6][!Refresh]
+
+[page7]
+Meter=String
+MeterStyle=allText | pageSwitcher
+Text="DownLoad"
+LeftMouseUpAction=[!WriteKeyValue Variables page 7][!Refresh]
+
+[page8]
+Meter=String
+MeterStyle=allText | pageSwitcher
+Text="UpLoad"
+LeftMouseUpAction=[!WriteKeyValue Variables page 8][!Refresh]
+
+[page9]
+Meter=String
+MeterStyle=allText | pageSwitcher
+Text="system"
+LeftMouseUpAction=[!WriteKeyValue Variables page 9][!Refresh]
+
+[page10]
+Meter=String
+MeterStyle=allText | pageSwitcher
+Text="time"
+LeftMouseUpAction=[!WriteKeyValue Variables page 10][!Refresh]
+
+[page11]
+Meter=String
+MeterStyle=allText | pageSwitcher
+Text="weather"
+LeftMouseUpAction=[!WriteKeyValue Variables page 11][!Refresh]
 
 ; ============================================================
 ; quick links
@@ -230,8 +409,8 @@ FontSize=11
 X=110
 Y=(#bgH#-70)
 Text=readme
-LeftMouseUpaction=["#ROOTCONFIGPATH#ReadMe.rtf"]
-ToolTipText="opens the file ReadMe.rtf"
+LeftMouseUpaction=["#ROOTCONFIGPATH#ReadMe.md"]
+ToolTipText="opens the file ReadMe.md"
 
 [advanced]
 Meter=String
@@ -240,11 +419,3 @@ Y=25r
 Text=advanced
 LeftMouseUpaction=["#@#default.txt"]["#@#Settings.txt"]
 ToolTipText="opens default.txt and settings.txt to manually edit settings"
-
-[reset]
-Meter=String
-MeterStyle=allText | readme
-Y=25r
-Text=reset all
-LeftMouseUpaction=!CommandMeasure "mSettingsScript" "resetAllVariables()"
-ToolTipText="changes ALL settings back to defaults"
