--- a/Memory/ram/ram.ini
+++ b/Memory/ram/ram.ini
@@ -1,12 +1,12 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 MouseOverAction=[!SetOption "subText" "Text" "%2B total"][!Redraw]
 MouseLeaveAction=[!SetOption "subText" "Text" "%1B free"][!Redraw]
 
 [Metadata]
-Name=Circuitous | Ram memory
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Ram memory
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Displays physical memory (RAM) usage.  The secondary text normally shows the amount of RAM free; mouse over the skin to show the total amount of RAM.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
