--- a/Memory/swap/swap.ini
+++ b/Memory/swap/swap.ini
@@ -1,12 +1,12 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 MouseOverAction=[!SetOption "subText" "Text" "%2B total"][!Redraw]
 MouseLeaveAction=[!SetOption "subText" "Text" "%1B free"][!Redraw]
 
 [Metadata]
-Name=Circuitous | Swap memory
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Swap memory
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Displays Swap memory (RAM + Pagefile.sys) usage.  The secondary text shows the amount of free Swap; mouse over the skin the show the total Swap.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
