--- a/Network/wifi/wireless.ini
+++ b/Network/wifi/wireless.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous | Wifi
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Wifi
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=If connected to a Wifi network, shows the Wifi signal strength, network name, and authentication type.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
