--- a/Processor/core 3/core3.ini
+++ b/Processor/core 3/core3.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous | CPU core 3
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | CPU core 3
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Displays the percent load and core frequency of the second CPU core.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
