--- a/Processor/cpu.ini
+++ b/Processor/cpu.ini
@@ -1,10 +1,10 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous | Processor
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Processor
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Displays the percentage load of the CPU (average of all cores), and the process that currently has the most CPU usage. | Click the main text to launch the Windows Task Manager.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
