--- a/Temps/CPU/CPU.ini
+++ b/Temps/CPU/CPU.ini
@@ -1,11 +1,11 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 
 [Metadata]
-Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
-Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
+Name=RSM |
+Author=Norbert Ruff | https://github.com/NorbertRuff
+Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\RSMTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
@@ -15,15 +15,21 @@ License=Creative Commons BY-NC-SA 3.0
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
 
-[mTemp]
+[mTemp1]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value1
+RegValue=#cpuTemp1#
+
+[mTemp2]
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO64\VSB
+RegValue=#cpuTemp2#
 
 [mPercent]
 Measure=Calc
-Formula=(mTemp/100)
+Formula=(mTemp1/100)
 
 @include5="#@#sharedMeters.inc"
 
@@ -40,7 +46,12 @@ MeterStyle=dividerStyle | dividerCommon
 [mainText]
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mTemp
+MeasureName=mTemp1
+MeasureName2=mTemp2
+ClipStringW=20
+ClipStringH=40
+ClipString=1
+Text="%1"
 
 [subText]
 Meter=STRING
@@ -49,7 +60,7 @@ MeasureName=mPercent
 NumOfDecimals=2
 ClipString=2
 ClipStringW=80
-Text="Intel Core i7-10700K"
+Text=#cpuTemp1Label#
 
 
 [Icon]
