--- a/Temps/Fan3/Fan3.ini
+++ b/Temps/Fan3/Fan3.ini
@@ -1,12 +1,9 @@
 [Rainmeter]
 Update=1000
 Group=rsm
-MouseOverAction=[!SetOption "mainText" "Text" "%2"][!Redraw]
-MouseLeaveAction=[!SetOption "mainText" "Text" "%1"][!Redraw]
-
 
 [Metadata]
-Name=RSM |
+Name=RSM | Fan 3
 Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\RSMTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
@@ -17,23 +14,22 @@ License=Creative Commons BY-NC-SA 3.0
 
 @include3="#@#Styles\common.inc"
 @include4="#@#Styles\#orient#.inc"
-@include5="#@#sharedMeters.inc"
 
 [mTemp]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=#pumpTemp#
+RegValue=#pumpTempValue#
 
 [mRpm]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=#pumpRpm#
+RegValue=#fan3rpm#
 
 [mPercent]
 Measure=Calc
-Formula=(mTemp/100)
+Formula=(mRpm/#fanMaxRpm#)
 
 @include5="#@#sharedMeters.inc"
 
@@ -50,8 +46,8 @@ MeterStyle=dividerStyle | dividerCommon
 [mainText]
 Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
-MeasureName=mTemp
-MeasureName2=mRpm
+MeasureName=mRpm
+MeasureName2=mTemp
 ClipStringW=20
 ClipStringH=40
 ClipString=1
@@ -62,7 +58,7 @@ Meter=STRING
 MeterStyle=subTextStyle | subTextCommon
 ClipString=2
 ClipStringW=80
-Text=#pumpLabel#
+Text=#fan3Label#
 
 
 [Icon]
@@ -70,4 +66,3 @@ Meter=Image
 MeterStyle=iconStyle
 ImageName=icon.png
 ImageTint=#colorIcon#
-
