--- a/Temps/GPU/GPU.ini
+++ b/Temps/GPU/GPU.ini
@@ -1,13 +1,13 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 MouseOverAction=[!SetOption "mainText" "Text" "%2"][!Redraw]
 MouseLeaveAction=[!SetOption "mainText" "Text" "%1"][!Redraw]
 
 [Metadata]
-Name=Circuitous |
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
-Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\CircuitousTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
+Name=RSM |
+Author=Norbert Ruff | https://github.com/NorbertRuff
+Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\RSMTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
 
@@ -21,13 +21,13 @@ License=Creative Commons BY-NC-SA 3.0
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value22
+RegValue=#gpuTemp#
 
 [mRpm]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=Value23
+RegValue=#gpuRpm#
 
 [mPercent]
 Measure=Calc
@@ -50,6 +50,9 @@ Meter=STRING
 MeterStyle=mainTextStyle | mainTextCommon
 MeasureName=mTemp
 MeasureName2=mRpm
+ClipStringW=20
+ClipStringH=40
+ClipString=1
 Text="%1"
 
 [subText]
@@ -58,7 +61,7 @@ MeterStyle=subTextStyle | subTextCommon
 NumOfDecimals=2
 ClipString=2
 ClipStringW=80
-Text="MSI GTX 1060 6GB"
+Text=#gpuTempLabel#
 
 
 [Icon]
