--- a/Volume/volume.ini
+++ b/Volume/volume.ini
@@ -1,12 +1,12 @@
 [Rainmeter]
 Update=1000
-Group=sysmon
+Group=rsm
 MouseScrollDownAction=[!CommandMeasure "mWin7Audio" "ChangeVolume -5"][!Update]
 MouseScrollUpAction=[!CommandMeasure "mWin7Audio" "ChangeVolume +5"][!Update]
 
 [Metadata]
-Name=Circuitous | Volume
-Author=Norbert Ruff | based on Flying Hyrax Circuitous
+Name=RSM | Volume
+Author=Norbert Ruff | https://github.com/NorbertRuff
 Information=Shows the current volume level and output device.  | Click the main text to toggle mute; click the secondary text to cycle through audio output devices. | Click anywhere in the roundline to set the volume to that level, or use the mouse wheel to raise and lower the volume.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
