--- a/Processor/core 4/core4.ini
+++ b/Processor/core 4/core4.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=RSM | CPU core 4
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Displays the percent load and core frequency of the fourth CPU core.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
