--- a/Temps/Pump/Pump.ini
+++ b/Temps/Pump/Pump.ini
@@ -7,7 +7,7 @@ MouseLeaveAction=[!SetOption "mainText" "Text" "%1"][!Redraw]
 
 [Metadata]
 Name=RSM |
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Displays a temperature and voltage using the SpeedFan application.  SpeedFan must be running in the background for the skin to work. | You will need to edit the sfTempIndex and sfVoltIndex variables in "\RSMTwo\@Resources\Settings.txt" to tell the skin which temperature and voltage to display. | The index number can be determined in SpeedFan's "Configure" window - the index of a sensor is its position in the sensor list, starting from the top and counting from 0. (The top sensor is 0, the second from the top is 1, etc.)
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
