--- a/Battery/battery.ini
+++ b/Battery/battery.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=RSM | Battery
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Shows the battery charge level.  Shows the charging/connected status if plugged in, or the estimated usage time remaining (if available).
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
