--- a/Config.ini
+++ b/Config.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=Settings Configuration Skin
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=This skin can be used to change appearance, system, and other settings for RSM Two. | The "info" tab shows general skin information, like the version, license, and credits. | The "appearance" sectoion is used to change how the skin looks, like the orientation, font, and colors. | The "system" section contains general system settings, like those for hard drives and network speeds. | The "time" section contains the settings for the clock skin. | The "weather" section holds the settings for the Weather skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
