--- a/Disks/activity/driveActivity.ini
+++ b/Disks/activity/driveActivity.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=RSM | Hard drive activity
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Displays the percent disk time and disk traffic per second from Windows Performance Monitor. | By default, the skin measures across all disks.  This can be changed by editing the "PerfMonInstance" value in the skin.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
