--- a/Memory/ram/ram.ini
+++ b/Memory/ram/ram.ini
@@ -6,7 +6,7 @@ MouseLeaveAction=[!SetOption "subText" "Text" "%1B free"][!Redraw]
 
 [Metadata]
 Name=RSM | Ram memory
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Displays physical memory (RAM) usage.  The secondary text normally shows the amount of RAM free; mouse over the skin to show the total amount of RAM.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
