--- a/Memory/swap/swap.ini
+++ b/Memory/swap/swap.ini
@@ -6,7 +6,7 @@ MouseLeaveAction=[!SetOption "subText" "Text" "%1B free"][!Redraw]
 
 [Metadata]
 Name=RSM | Swap memory
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Displays Swap memory (RAM + Pagefile.sys) usage.  The secondary text shows the amount of free Swap; mouse over the skin the show the total Swap.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
