--- a/Network/wifi/wireless.ini
+++ b/Network/wifi/wireless.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=RSM | Wifi
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=If connected to a Wifi network, shows the Wifi signal strength, network name, and authentication type.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
