--- a/Processor/cpu.ini
+++ b/Processor/cpu.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=RSM | Processor
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Displays the percentage load of the CPU (average of all cores), and the process that currently has the most CPU usage. | Click the main text to launch the Windows Task Manager.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
