--- a/Time/clock.ini
+++ b/Time/clock.ini
@@ -4,7 +4,7 @@ Group=rsm
 
 [Metadata]
 Name=RSM | Time & Date
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Shows the current time and date. | Use the Settings.ini skin to change the time and date formats, or to change what the roundline displays.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
