--- a/Volume/volume.ini
+++ b/Volume/volume.ini
@@ -6,7 +6,7 @@ MouseScrollUpAction=[!CommandMeasure "mWin7Audio" "ChangeVolume +5"][!Update]
 
 [Metadata]
 Name=RSM | Volume
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=Shows the current volume level and output device.  | Click the main text to toggle mute; click the secondary text to cycle through audio output devices. | Click anywhere in the roundline to set the volume to that level, or use the mouse wheel to raise and lower the volume.
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
