--- a/_bars/vertical.ini
+++ b/_bars/vertical.ini
@@ -6,7 +6,7 @@ OnRefreshAction=!Zpos -2
 
 [Metadata]
 Name=RSM |
-Author=Norbert Ruff | https://github.com/NorbertRuff
+Author=Norbert Ruff | Flying Hyrax | flyinghyrax.deviantart.com
 Information=
 Version=1.0
 License=Creative Commons BY-NC-SA 3.0
